--- a/projects/rogerjos/dominion/Makefile
+++ b/projects/rogerjos/dominion/Makefile
@@ -36,29 +36,41 @@ player: player.c interface.o
 unittest1: unittest1.c dominion.o rngs.o
 	gcc -o unittest1 -g  unittest1.c dominion.o rngs.o $(CFLAGS)
 
-unittest2: unittest1.c dominion.o rngs.o
-	gcc -o unittest1 -g  unittest1.c dominion.o rngs.o $(CFLAGS)
+unittest2: unittest2.c dominion.o rngs.o
+	gcc -o unittest2 -g  unittest2.c dominion.o rngs.o $(CFLAGS)
 
 unittest3: unittest3.c dominion.o rngs.o
 	gcc -o unittest3 -g  unittest3.c dominion.o rngs.o $(CFLAGS)
 
 unittest4: unittest4.c dominion.o rngs.o
-	gcc -o unittest3 -g  unittest3.c dominion.o rngs.o $(CFLAGS)
+	gcc -o unittest4 -g  unittest4.c dominion.o rngs.o $(CFLAGS)
+
+cardtest1: cardtest1.c dominion.o rngs.o
+	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o $(CFLAGS)
+
+cardtest2: cardtest2.c dominion.o rngs.o
+	gcc -o cardtest2 -g cardtest2.c dominion.o rngs.o $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o rngs.o
+	gcc -o cardtest3 -g cardtest3.c dominion.o rngs.o $(CFLAGS)
+
+cardtest4: cardtest4.c dominion.o rngs.o
+	gcc -o cardtest4 -g cardtest4.c dominion.o rngs.o $(CFLAGS)
 
 runUnitTests: unittest1 unittest2 unittest3 unittest4
 	echo "unittest1.c:" > unittestresult.out
 	./unittest1 &>> unittestresult.out
-	echo "unittest2.c:" >> unittestresult.out
-	./unittest2 &>> unittestresult.outi
-	echo "unittest3.c:" >> unittestresult.out
-	./unittest3 &>> unittestresult.outi
-	echo "unittest4.c:" >> unittestresult.out
-	./unittest4 &>> unittestresult.outi
+	echo -e "\nunittest2.c:" >> unittestresult.out
+	./unittest2 &>> unittestresult.out
+	echo -e "\nunittest3.c:" >> unittestresult.out
+	./unittest3 &>> unittestresult.out
+	echo -e "\nunittest4.c:" >> unittestresult.out
+	./unittest4 &>> unittestresult.out
 
-gcov dominion.c >> unittestresult.out
+#gcov dominion.c >> unittestresult.out
 #	cat dominion.c.gcov >> unittestresult.out
 
 all: playdom player testDrawCard testBuyCard badTestDrawCard
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard badTestDrawCard.exe unittest1 unittest2 unittest3 unittest4
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard badTestDrawCard.exe unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
